--- a/rag-chatbot/requirements.txt
+++ b/rag-chatbot/requirements.txt
@@ -1,11 +1,27 @@
-fastapi>=0.110.0
-uvicorn>=0.29.0
-pydantic>=2.6.4
-pydantic-settings>=2.2.1
-beanie>=1.24.1
-weaviate-client>=4.4.0
-openai>=1.30.1
-python-dotenv>=1.0.1
-motor>=3.3.2
+fastapi==0.110.0
+uvicorn==0.29.0
+# pydantic==2.6.4
+pydantic
+pydantic-settings==2.2.1
+beanie==1.25.0
+weaviate-client==3.24.2
+# openai==0.28.0
+cohere==5.13.12
+sentence-transformers==3.4.1
+python-multipart==0.0.20
+python-dotenv==1.0.1
 python-multipart>=0.0.5
 httpx>=0.23.0
+pymupdf==1.25.2
+# nltk==3.9.1
+# regex==2024.11.6
+# joblib==1.4.2
+# Pillow==11.1.0
+# numpy==2.2.2
+# opencv-python==4.11.0.86
+pymongo>=3.13
+motor >=3.7.0
+passlib>=1.7.4
+bcrypt>=4.2.1 
+python-jose[cryptography]>=3.3.0
+streamlit>=1.42.0
